# whatsapp-agent-waha-agno

./: Dockerfile  README.md  app.py  compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
data/: World_fantasy.md  prompt.xml
routers/: waha_router.py
services/: waha_services.py
workers/: tasks.py
