[project]
name = "waha-agno"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.5.10",
    "celery>=5.6.2",
    "fastapi[standard]>=0.135.1",
    "groq>=1.1.1",
    "redisvl>=0.16.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.3.0",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
]
